--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.1'
-
     implementation 'com.tapadoo.android:alerter:2.0.6'
+    implementation "com.squareup.picasso:picasso:2.4.0"
 }
