--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,6 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Apr 30 23:27:06 CST 2021
+android.enableJetifier=true
+android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536m
