--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,28 @@
     package="com.sistemasdt.dhr">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.sistemasdt.dhr.Principal"
+        <activity
+            android:name="com.sistemasdt.dhr.Principal"
             android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name="com.sistemasdt.dhr.InicioSesion"
-            android:windowSoftInputMode="adjustPan"/>
-        <activity android:name="com.sistemasdt.dhr.MainActivity"
+        <activity
+            android:name="com.sistemasdt.dhr.InicioSesion"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name="com.sistemasdt.dhr.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
